[tool.poetry]
name = "CBAnalysis"
version = "0.1.0"
description = "Analysis module for Citi Bike Planner app"
authors = ["Ri Le <r.le@columbia.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Shapely = "^1.7.1"
Fiona = "^1.8.17"
Rtree = "^0.9.4"
geopandas = "^0.8.1"
pandas = "^1.1.4"
requests = "^2.24.0"
Janitor = "^0.1.1"
pyjanitor = "^0.20.10"
click = "^8.0.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^5.2"
black = "^22.1.0"
jupyterlab = "^3.2.9"


[tool.poetry.scripts]
lint = "pylint:run_pylint"
run = "cbanalysis:main"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"