[tool.poetry]
name = "CBAnalysis"
version = "0.1.0"
description = "Analysis module for Citi Bike Planner app"
authors = ["Ri Le <r.le@columbia.edu>"]

[tool.poetry.dependencies]
# Important: Use ~ to limit to only 3.11 and not 3.12
python = "~3.11"
Shapely = "^2.0.1"
Fiona = "^1.8.17"
Rtree = "^1.0.1"
geopandas = "^0.12.2"
pandas = "^1.1.4"
requests = "^2.24.0"
Janitor = "^0.1.1"
pyjanitor = "^0.24.0"
click = "^8.0.3"
tqdm = "^4.62.3"
scipy = "^1.10.0"
jupyter-ydoc = "^0.3.1"
jupyter-server-ydoc = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^7.2"
black = "^22.1.0"
jupyterlab = "^3.2.9"
pyclean = "^2.0.0"


[tool.poetry.scripts]
lint = "pylint:run_pylint"
run = "cbanalysis:main"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"